@@ -1,6 +1,6 @@
 package com.ttdat.authservice.application.queryhandlers;
 
-import com.ttdat.authservice.api.dto.PermissionDTO;
+import com.ttdat.authservice.api.dto.common.PermissionDTO;
 import com.ttdat.authservice.application.mappers.PermissionMapper;
 import com.ttdat.authservice.application.queries.FindAllPermissionQuery;
 import com.ttdat.authservice.domain.repositories.PermissionRepository;
@@ -9,7 +9,6 @@ import org.axonframework.queryhandling.QueryHandler;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
@@ -22,6 +21,6 @@ public class PermissionQueryHandler {
         return permissionRepository.findAll()
                 .stream()
                 .map(permissionMapper::toPermissionDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
